feat: CepController create a interface to validate and process cep requests

--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -13,12 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "@types/hapi__joi": "^17.1.7",
-    "@types/helmet": "^4.0.0",
+    "@hapi/joi": "16.1.8",
+    "axios": "^0.24.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "express-joi-validation": "^5.0.0",
+    "express-joi-validation": "4.0.3",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "i": "^0.3.7",
@@ -35,6 +34,8 @@
     "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.7",
+    "@types/hapi__joi": "^16.0.12",
+    "@types/helmet": "^4.0.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
