--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -25,17 +25,19 @@
     "npm": "^8.1.3",
     "prom-client": "^14.0.1",
     "prometheus-api-metrics": "^3.2.0",
+    "redis": "^3.1.2",
     "typescript-rest-swagger": "^1.1.7"
   },
   "devDependencies": {
     "@swc/jest": "^0.2.5",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/hapi__joi": "^16.0.12",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.7",
-    "@types/hapi__joi": "^16.0.12",
-    "@types/helmet": "^4.0.0",
+    "@types/redis": "^2.8.32",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
