--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "16.1.8",
+    "async-redis": "^2.0.0",
     "axios": "^0.24.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
