--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit --passWithNoTests",
     "build": "rimraf ./build && tsc -p .",
-    "start:prod": "yarn build && node build/server.js",
+    "start:prod": "node build/Server.js",
     "start:dev": "ts-node-dev --respawn --ignore-watch node_modules --transpile-only src/Server.ts"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "npm": "^8.1.3",
     "prom-client": "^14.0.1",
     "prometheus-api-metrics": "^3.2.0",
+    "promise-redis": "^0.0.5",
     "redis": "^3.1.2",
     "typescript-rest-swagger": "^1.1.7"
   },
