--- a/cep-service/docker-compose.yml
+++ b/cep-service/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.1'
 services:
   app:
     build: .
+    volumes:
+      - ./src:/usr/src/app/src
     ports:
       - "3000:3000"
     links:
