--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -22,8 +22,11 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "i": "^0.3.7",
+    "jwt-simple": "^0.5.6",
     "morgan": "^1.10.0",
     "npm": "^8.1.3",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "prom-client": "^14.0.1",
     "prometheus-api-metrics": "^3.2.0",
     "promise-redis": "^0.0.5",
@@ -39,6 +42,7 @@
     "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/redis": "^2.8.32",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
