--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-actuator": "^1.8.0",
     "express-joi-validation": "4.0.3",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
@@ -44,6 +45,7 @@
     "@types/node": "^16.11.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/redis": "^2.8.32",
+    "@types/express-actuator": "^1.8.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
