--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "16.1.8",
+    "@swc/core": "^1.2.108",
     "async-redis": "^2.0.0",
     "axios": "^0.24.0",
     "compression": "^1.7.4",
@@ -32,12 +33,16 @@
     "prometheus-api-metrics": "^3.2.0",
     "promise-redis": "^0.0.5",
     "redis": "^3.1.2",
+    "regenerator-runtime": "^0.13.9",
     "typescript-rest-swagger": "^1.1.7"
   },
   "devDependencies": {
+    "@jest-mock/express": "^1.4.5",
+    "nock": "^13.2.1",
     "@swc/jest": "^0.2.5",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/express-actuator": "^1.8.0",
     "@types/hapi__joi": "^16.0.12",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.0.2",
@@ -45,7 +50,6 @@
     "@types/node": "^16.11.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/redis": "^2.8.32",
-    "@types/express-actuator": "^1.8.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
