--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -34,11 +34,12 @@
     "promise-redis": "^0.0.5",
     "redis": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
-    "typescript-rest-swagger": "^1.1.7"
+    "swagger-ui-express": "^4.1.6",
+    "typescript-rest-swagger": "^1.1.7",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@jest-mock/express": "^1.4.5",
-    "nock": "^13.2.1",
     "@swc/jest": "^0.2.5",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
@@ -50,7 +51,9 @@
     "@types/node": "^16.11.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/redis": "^2.8.32",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^27.3.1",
+    "nock": "^13.2.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
