--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -7,7 +7,9 @@
     "test": "jest --detectOpenHandles --forceExit --passWithNoTests",
     "build": "rimraf ./build && tsc -p .",
     "start:prod": "node build/Server.js",
-    "start:dev": "ts-node-dev --respawn --ignore-watch node_modules --transpile-only src/Server.ts"
+    "start:dev": "ts-node-dev --respawn --ignore-watch node_modules --transpile-only src/Server.ts",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint --fix src --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -52,6 +54,15 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/redis": "^2.8.32",
     "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.4.1",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
     "ts-jest": "^27.0.7",
