--- a/cep-service/docker-compose.yml
+++ b/cep-service/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - REDIS_URI=redis
       - REDIS_PORT=6379
       - NODE_ENV=development
+      - PORT=3000
     volumes:
       - ./src:/usr/src/app/src
     ports:
