--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@hapi/joi": "16.1.8",
     "@swc/core": "^1.2.108",
+    "ansi-regex": "^6.0.1",
     "async-redis": "^2.0.0",
     "axios": "^0.24.0",
     "compression": "^1.7.4",
@@ -62,9 +63,9 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.4.1",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
