--- a/cep-service/docker-compose.yml
+++ b/cep-service/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - REDIS_PORT=6379
       - NODE_ENV=development
       - PORT=3000
+      - CEP_CACHE_MAX_AGE_SECONDS=86400
     volumes:
       - ./src:/usr/src/app/src
     ports:
