--- a/cep-service/package.json
+++ b/cep-service/package.json
@@ -29,7 +29,6 @@
     "i": "^0.3.7",
     "jwt-simple": "^0.5.6",
     "morgan": "^1.10.0",
-    "npm": "^8.1.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "prom-client": "^14.0.1",
@@ -62,6 +61,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
